third_party/move/tools/move-decompiler/tests/compiler-v2-test/more-v1/liveness/trailing_semi.exp
script {
    entry fun <SELF>_0() {
        ()
    }
}

script {
    entry fun <SELF>_1() {
        abort 0
    }
}

script {
    entry fun <SELF>_2() {
        ()
    }
}

script {
    entry fun <SELF>_3() {
        abort 0
    }
}

script {
    entry fun <SELF>_4(cond: bool) {
        if (cond) return ();
    }
}

script {
    entry fun <SELF>_5(cond: bool) {
        if (!cond) abort 0;
    }
}

script {
    entry fun <SELF>_6(cond: bool) {
        if (cond) abort 0;
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ trailing_semi.move:2:15
  │
2 │     entry fun <SELF>_0() {
  │               ^
  │               │
  │               Unexpected '<'
  │               Expected an identifier
